@@ -1,3 +1,7 @@
+2011-01-09 dab <david.astgtciv@gmail.com>
+	* Fixed output.c to be two-tailed again.
+	* Matching fix to run_test.c to use a two-tailed test.
+
 2011-01-07  Dirk Eddelbuettel  <edd@debian.org>
 
 	* autotoolsRerunMeIfTroubles.sh: Needed to reset autotools on Ubuntu
